cli/tests/snapshots/cli__run_file@hello_world.gleam.snap
---
source: tests/cli.rs
expression: "formatdoc!\n{\n    \"\n            STDOUT\n            {out}\n            STDERR\n            {err}\"\n}"
input_file: tests/inputs/hello_world.gleam
---
STDOUT
Hello world!

STDERR
