cli/tests/snapshots/cli__run_file@smain_string.gleam.snap
---
source: tests/cli.rs
expression: "formatdoc!\n{\n    \"\n            STDOUT\n            {out}\n            STDERR\n            {err}\"\n}"
input_file: tests/inputs/smain_string.gleam
---
STDOUT


STDERR
