cli/tests/snapshots/cli__run_file@user.gleam.snap
---
source: tests/cli.rs
expression: "formatdoc!\n{\"\n            STDOUT\n            {out}\n            STDERR\n            {err}\"}"
input_file: tests/inputs/user.gleam
---
STDOUT

STDERR
error: Module does not have a main function

`tests/inputs/user` does not have a main function so the module can not be run.
Hint: Add a public `main` function to `src/tests/inputs/user.gleam`.
