cli/tests/snapshots/cli__run_images@beside1.gleam.snap
---
source: tests/cli.rs
expression: "format!(\"{out}\")"
input_file: tests/images/beside1.gleam
---
<svg width="80.0" height="70.0" xmlns="http://www.w3.org/2000/svg">
  <g>
    <g>
      <g>
        <ellipse cx="10.0" cy="35.0" rx="10.0" ry="35.0" transform="rotate(0.0 10.0 35.0)" fill="rgba(211, 211, 211, 1.0)" />
        <ellipse cx="30.0" cy="35.0" rx="10.0" ry="25.0" transform="rotate(0.0 30.0 35.0)" fill="rgba(169, 169, 169, 1.0)" />
      </g>
      <ellipse cx="50.0" cy="35.0" rx="10.0" ry="15.0" transform="rotate(0.0 50.0 35.0)" fill="rgba(105, 105, 105, 1.0)" />
    </g>
    <ellipse cx="70.0" cy="35.0" rx="10.0" ry="5.0" transform="rotate(0.0 70.0 35.0)" fill="rgba(0, 0, 0, 1.0)" />
  </g>
</svg>
