cli/tests/snapshots/cli__run_images@beside_align1.gleam.snap
---
source: tests/cli.rs
expression: "format!(\"{out}\")"
input_file: tests/images/beside_align1.gleam
---
<svg width="80.0" height="70.0" xmlns="http://www.w3.org/2000/svg">
  <g>
    <g>
      <g>
        <ellipse cx="10.0" cy="35.0" rx="10.0" ry="35.0" transform="rotate(0.0 10.0 35.0)" fill="rgba(176, 196, 222, 1.0)" />
        <ellipse cx="30.0" cy="45.0" rx="10.0" ry="25.0" transform="rotate(0.0 30.0 45.0)" fill="rgba(123, 104, 238, 1.0)" />
      </g>
      <ellipse cx="50.0" cy="55.0" rx="10.0" ry="15.0" transform="rotate(0.0 50.0 55.0)" fill="rgba(106, 90, 205, 1.0)" />
    </g>
    <ellipse cx="70.0" cy="65.0" rx="10.0" ry="5.0" transform="rotate(0.0 70.0 65.0)" fill="rgba(0, 0, 128, 1.0)" />
  </g>
</svg>
